Fix slider overflow at various display sizes

--- a/scss/HSCBoredAutumn.scss
+++ b/scss/HSCBoredAutumn.scss
@@ -79,6 +79,66 @@ body {
     font-size: 12px;
     padding: 5px;
 }
+@media (min-width: 750px) and (max-width: 985px) {
+    .sliderData h2 {
+        font-size: 24px;
+        margin-top: 0;
+        padding-top: 0;
+    }
+
+    .sliderData p {
+        font-size: 12px;
+        line-height: 1.5;
+    }
+    .container .jumbotron {
+        padding-right: 20px;
+    }
+    .smallReadMoreButton {
+        background-color: $mediumOrange;
+        color: white;
+        font-size: 10px;
+        padding: 3px;
+    }
+}
+@media (max-width: 767px) {
+    body {
+        padding: 0 10px;
+    }
+    .jumbotron {
+        min-height: 440px;
+        overflow: visible;
+    }
+    .sliderData h2 {
+        font-size: 24px;
+    }
+
+    .sliderData p {
+        font-size: 12px;
+        line-height: 1.5;
+    }
+
+    .container .jumbotron {
+        padding-right: 0;
+    }
+    .smallReadMoreButton {
+        background-color: $mediumOrange;
+        color: white;
+        font-size: 8px;
+        padding: 3px;
+    }
+}
+@media (min-width: 655px) and (max-width: 767px) {
+    .jumbotron {
+        min-height: 480px;
+        overflow: visible;
+    }
+}
+@media (min-width: 400px) and (max-width: 475px) {
+    .jumbotron {
+        min-height: 380px;
+        overflow: visible;
+    }
+}
 
 /*
 * — Events —
